--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="60b471">  <td>24/09/23 23:45:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AndroidBase.configureAppium()[pri:0, instance:TestBot.Appium.AndroidEcommerce_tc_4_Hybrid@36b4fe2a]">&gt;&gt;configureAppium</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1373419525</td>   <td></td> </tr>
-<tr bgcolor="76aac9">  <td>24/09/23 23:45:42</td>   <td>9706</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AndroidEcommerce_tc_4_Hybrid.fillForm()[pri:0, instance:TestBot.Appium.AndroidEcommerce_tc_4_Hybrid@36b4fe2a]">fillForm</td> 
-  <td>main@1373419525</td>   <td></td> </tr>
-<tr bgcolor="60b471">  <td>24/09/23 23:46:22</td>   <td>50053</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AndroidBase.tearDown()[pri:0, instance:TestBot.Appium.AndroidEcommerce_tc_4_Hybrid@36b4fe2a]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1373419525</td>   <td></td> </tr>
+<tr bgcolor="60b471">  <td>24/10/02 15:08:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AndroidBrowserBase.configureAppium()[pri:0, instance:TestBot.Appium.AndroidMobileBrowserTest@60015ef5]">&gt;&gt;configureAppium</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@737945227</td>   <td></td> </tr>
+<tr bgcolor="76aac9">  <td>24/10/02 15:08:47</td>   <td>16398</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AndroidMobileBrowserTest.mobileBrowserTest()[pri:0, instance:TestBot.Appium.AndroidMobileBrowserTest@60015ef5]">mobileBrowserTest</td> 
+  <td>main@737945227</td>   <td></td> </tr>
+<tr bgcolor="60b471">  <td>24/10/02 15:08:54</td>   <td>23441</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AndroidBrowserBase.tearDown()[pri:0, instance:TestBot.Appium.AndroidMobileBrowserTest@60015ef5]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@737945227</td>   <td></td> </tr>
 </table>
